fixed:alignment issue

--- a/src/blocks/blockquote/style.scss
+++ b/src/blocks/blockquote/style.scss
@@ -235,7 +235,7 @@
 	    flex-direction: row-reverse;
 	}
 
-	.uagb-quote__align-right .uagb-quote__author-wrap.uagb-quote__author-at-right {
+	.uagb-quote__align-right .uagb-quote__author-wrap.uagb-quote__author-at-top {
 	    text-align: right;
 	}
 
